src/autoindex.scss
@import 'mixins';
@import 'vars';

html {
    min-height: 100%;
    color: #61666c;
    background-color: $gray1;
    font-weight: 400;
    font-size: 14px;
    font-family: "Open Sans", sans-serif;
    line-height: 1.7em;
    @include dark-mode() {
        background-color: #232323;
    }
}

a,
img {
    border: none;
    outline: none;
}

body {
    padding: 20px;
    @include small-screen() {
        padding: 10px;
    }
}

#indextitle,
#indexlist {
    color: $black1;
    margin: 1em auto;
    max-width: 95%;
    width: 900px;
}

#indextitle {
    padding-bottom: 1em;
    border-bottom: $gray5-border;
}

#indexlist {
    border-collapse: separate;
    border-radius: .25rem;
    border-spacing: 0;
    border: $gray5-border;
    box-shadow: none;
    background-color: #fff;
    @include dark-mode() {
        color: rgba(255, 255, 255, .8);
        background-color: #232323;
    }

    a {
        font-weight: 600;
        text-decoration: none;
        color: $gray4;
        @include dark-mode() {
            color: rgba(255, 255, 255, .8);
        }

        & > img:hover {
            opacity: 0.4;
        }

        &:hover,
        &:focus,
        &:active {
            color: $black1;
            @include dark-mode() {
                color: #696969;
            }
        }

    }

    tr {

        &:first-child {
            td,
            th {
                border-top: none;
            }
        }

        &:last-child {
            td,
            th {
                border-bottom: none;
            }
        }

        td:first-child,
        th:first-child {
            border-left: none;
        }

        td:last-child,
        th:last-child {
            border-right: none;
        }

        // Hide huge bars
        &.indexbreakrow {
            display: none;
        }

        // Row styling
        &.even td {
            background-color: $white;
        }
        &.odd td {
            background-color: $gray1;
        }

    }

    th, td {
        transition: background .2s ease, border-color .2s ease, color .2s ease;
        text-align: left;
        vertical-align: middle;
        padding: 0.4em 0.6em;
        border-top: $gray5-border;

        &.indexcolicon {
            padding: 0;
        }

        &.indexcolicon {
            text-align: center;
        }

        &:not(.indexcolname) {
            border-left: $gray5-border;
        }

        // make links fill up the whole table cell
        a {
            display: block;
            width: 100%;
            height: 100%;
        }
    }

    th {
        font-weight: 700;
        text-transform: none;
        // vertical-align: middle;
        padding: 0.7em 0.8em;
        // text-align: left;
        padding-left: 0.6em;
        padding-right: 0.6em;
        background-color: $gray3;
        @include dark-mode() {
            background-color: #0f0f0f;
        }

        &:hover {
            background-color: $gray5;
            @include dark-mode() {
                background-color: rgba(255, 255, 255, .05);
            }
        }
    }

    td {
    }
}

